--- a/trunk/web/template/bshark/main-light.css
+++ b/trunk/web/template/bshark/main-light.css
@@ -1,10 +1,12 @@
-@font-face {
-    font-family: Texta-book;
-    src: url("/template/bshark/2C5677_2_0.ttf");
+h1, h2, h3, h4, h5, h6 {
+    font-family: Open Sans, Seravek, Segoe UI, Verdana, PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, "sans-serif";
+    font-weight: 300;
+    color: #3d3d3d;
+    line-height: 1.1;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    font-family: Texta-book, Open Sans, Seravek, Segoe UI, Verdana, PingFang SC, Hiragino Sans GB, Lantinghei SC, Microsoft Yahei, Consoles, WenQuanYi Micro Hei, sans;
+pre, code {
+    font-family: monaco, Source Code Pro, Consolas, Lucida Console, monospace
 }
 
 img {
